added comments and swagger file
