# src/controllers/auth.controller.ts
@@ -1,6 +1,14 @@
 import authService from "../services/auth.service";
 import { ZodError } from "zod";
 
+/**
+ * Route handler for the "/auth-url" endpoint. Returns the URL for Google's OAuth2 authentication flow.
+ *
+ * @param {object} req - Express request object.
+ * @param {object} res - Express response object.
+ * @returns {object} - The URL for Google's OAuth2 authentication flow.
+ * @throws {Error} - If there is an error getting the auth URL.
+ */
 const getAuthUrl = async (req: any, res: any) => {
   try {
     const authUrl = await authService.getAuthUrl();
@@ -10,6 +18,15 @@ const getAuthUrl = async (req: any, res: any) => {
     res.status(500).json({ error: "Internal server error" });
   }
 };
+
+/**
+ * Route handler for the "/oauth2callback" endpoint. Handles the callback from Google's OAuth2 authentication flow.
+ *
+ * @param {object} req - Express request object.
+ * @param {object} res - Express response object.
+ * @returns {object} - An object containing the access token and refresh token.
+ * @throws {Error} - If there is an error getting the access token.
+ */
 
 const oauth2callback = async (req: any, res: any) => {
   try {
