# src/controllers/availability.controller.ts
@@ -1,6 +1,14 @@
 import availabilityService from "../services/availability.service";
 import { ZodError } from "zod";
 
+/**
+ * Route handler for the "/availability" endpoint. Returns a list of available calendar events between the specified start and end dates.
+ *
+ * @param {object} req - Express request object.
+ * @param {object} res - Express response object.
+ * @returns {Array} - An array of available calendar events.
+ * @throws {Error} - If there is an error retrieving the calendar events.
+ */
 const getAvailability = async (req: any, res: any) => {
   try {
     const startDate = req.query.startDate as string;
